--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-//    implementation 'mysql:mysql-connector-java:8.0.26'
     implementation 'mysql:mysql-connector-java:5.1.6'
-
+    implementation 'com.sun.mail:javax.mail:1.6.2'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
 }
