--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:theme="@style/Theme.FaceProcess" >
         <activity
             android:name=".resignActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
         <activity
             android:name=".LoginActivity"
             android:exported="true"
