--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     implementation 'mysql:mysql-connector-java:5.1.6'
     implementation 'com.sun.mail:javax.mail:1.6.2'
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
+    implementation 'com.squareup.okio:okio:3.0.0-alpha.10'
+
+
 }
